--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <article class="main-card">
+        <h3>Фритрек и нулевой спринт: Подготовка к работе</h3>
+        <img src="" alt="">
+        <div class="card-content">
+          <p></p>
+          <p></p>
+          <button class="card-button"></button>
+          <button class="card-button"></button>
+        </div>
+
+      </article>
+
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
