--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1></HTML></h1>
-      <h2>закрывающий тег</h2>
+      <h1 class="title h1">&lt;/HTML&gt;</h1>
+      <h2 class="title h2">закрывающий тег</h2>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -44,15 +44,19 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <article class="main-card">
         <h3>Фритрек и нулевой спринт: Подготовка к работе</h3>
-        <img src="" alt="">
+        <img class="card-image" src="./images/truck.png" alt="Фуд Трак">
         <div class="card-content">
-          <p></p>
-          <p></p>
-          <button class="card-button"></button>
-          <button class="card-button"></button>
+          <div class="card-content__text">
+            <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p>Место для ваших воспоминаний о начале обучения.</p>
+          </div>
+          <div class="card-content__buttons">
+            <button class="card-button card-button__svg"></button>
+            <button class="card-button card-button__svg">like</button>
+          </div>
         </div>
 
       </article>
