--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body class="page">
     <header class="header">
+        <img alt="gosyslygi" src="./svg/image.png"/>
       <div class="titles">
         <h1 class="title header-title__1">&lt;/HTML&gt;</h1>
         <h2 class="title header-title__2">закрывающий тег</h2>
